--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -29,6 +29,8 @@
                 android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
                 android:text="@string/title_schedule_assistant"
                 android:textAlignment="center"
+                android:textColor="@color/blue_principal"
+                android:textColorHint="@color/blue_principal"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -54,6 +56,7 @@
                 android:drawableLeft="@drawable/ic_baseline_complains"
                 android:text="@string/title_contact_number"
                 android:textAlignment="center"
+                android:textColor="@color/blue_principal"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -83,8 +86,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_weight="2"
-                    android:background="#2196F3"
+                    android:background="@color/blue_second"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
                     android:src="@drawable/ic_baseline_call_24" />
@@ -94,6 +101,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_weight="2"
                     android:background="#92DC3C"
                     android:paddingTop="4dp"
@@ -127,8 +138,12 @@
                     android:id="@+id/btnCallEntrance"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_weight="2"
-                    android:background="#2196F3"
+                    android:background="@color/blue_second"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
                     android:src="@drawable/ic_baseline_call_24" />
@@ -150,6 +165,7 @@
                 android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:text="@string/title_contact_email"
                 android:textAlignment="center"
+                android:textColor="@color/blue_principal"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -180,11 +196,15 @@
                     android:id="@+id/btnSendEmailAdmin"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="2dp"
+
                     android:layout_weight="0"
-                    android:background="#FF9800"
+                    android:background="@color/blue_light"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
-
                     android:src="@drawable/ic_baseline_email_24" />
             </LinearLayout>
 
@@ -213,11 +233,15 @@
                     android:id="@+id/btnSendEmailAux"
                     android:layout_width="70dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="2dp"
+
                     android:layout_weight="0"
-                    android:background="#FF9800"
+                    android:background="@color/blue_light"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
-
                     android:src="@drawable/ic_baseline_email_24" />
             </LinearLayout>
 
@@ -246,8 +270,12 @@
                     android:id="@+id/btnSendEmailConsejo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_weight="2"
-                    android:background="#FF9800"
+                    android:background="@color/blue_light"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
                     android:src="@drawable/ic_baseline_email_24" />
