--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,17 @@
         android:label="@string/menu_complaints"
         tools:layout="@layout/fragment_complaints" />
 
+    <fragment
+        android:id="@+id/nav_parking"
+        android:name="co.japl.android.torressansebastian.ui.parking.ParkingFragment"
+        android:label="@string/menu_parking"
+        tools:layout="@layout/fragment_parking" />
+
+    <fragment
+        android:id="@+id/nav_admin_pay"
+        android:name="co.japl.android.torressansebastian.ui.admin_pay.AdministrationPay"
+        android:label="@string/menu_admin_pay"
+        tools:layout="@layout/fragment_administration_pay" />
+
+
 </navigation>
