--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -34,6 +34,13 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="10dp"
+                android:background="?android:attr/listDivider" />
+
             <fragment
                 android:id="@+id/week_view"
                 android:layout_width="match_parent"
@@ -60,6 +67,13 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
+            <View
+                android:id="@+id/divider4"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="10dp"
+                android:background="?android:attr/listDivider" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -70,7 +84,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="@string/admin_number" />
 
                 <TextView
@@ -90,7 +104,7 @@
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:background="@color/blue_second"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
@@ -105,7 +119,7 @@
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:background="#92DC3C"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
@@ -123,7 +137,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:text="@string/entrance_nbr" />
 
                 <TextView
@@ -142,7 +156,7 @@
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
-                    android:layout_weight="2"
+                    android:layout_weight="3"
                     android:background="@color/blue_second"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
@@ -168,6 +182,13 @@
                 android:textColor="@color/blue_principal"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="10dp"
+                android:background="?android:attr/listDivider" />
 
             <LinearLayout
                 android:layout_width="match_parent"
