--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -17,10 +17,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/imageView3"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:src="@drawable/location" />
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/torres_san_sebastian" />
 
             <TextView
                 android:id="@+id/textUnitName"
@@ -72,6 +73,12 @@
                 android:text="@string/neighborhood"
                 android:textAlignment="center"
                 android:textSize="20sp" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:src="@drawable/location" />
 
         </LinearLayout>
     </ScrollView>
