--- a/app/src/main/res/layout/pet_ownership.xml
+++ b/app/src/main/res/layout/pet_ownership.xml
@@ -37,6 +37,20 @@
                 android:background="?android:attr/listDivider" />
 
             <TextView
+                android:id="@+id/tvURPetsManual"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/pets_UR_manual" />
+
+            <View
+                android:id="@+id/divider8"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="?android:attr/listDivider" />
+
+            <TextView
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
