--- a/app/src/main/res/layout/fragment_playground.xml
+++ b/app/src/main/res/layout/fragment_playground.xml
@@ -23,7 +23,8 @@
             android:drawableLeft="@drawable/ic_baseline_sports_soccer_24"
             android:text="@string/title_playground"
             android:textAlignment="center"
-            android:textSize="16sp"
+            android:textColor="@color/blue_principal"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <View
