--- a/app/src/main/res/layout/fragment_garbage.xml
+++ b/app/src/main/res/layout/fragment_garbage.xml
@@ -22,7 +22,8 @@
             android:drawableLeft="@drawable/ic_baseline_restore_from_trash_24"
             android:text="@string/title_garbage"
             android:textAlignment="center"
-            android:textSize="16sp"
+            android:textColor="@color/blue_principal"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <View
