--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -74,6 +74,10 @@
             android:id="@+id/nav_suggestion"
             android:icon="@drawable/ic_baseline_suggest"
             android:title="@string/menu_suggestion" />
+        <item
+            android:id="@+id/nav_box_suggestion"
+            android:icon="@drawable/ic_baseline_suggest"
+            android:title="@string/menu_box_suggestion" />
     </group>
         </menu>
     </item>
