--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -121,5 +121,15 @@
             app:destination="@id/nav_information" />
     </fragment>
 
+    <fragment
+        android:id="@+id/nav_box_suggestion"
+        android:name="co.japl.android.torressansebastian.ui.box_suggestion.BoxSuggestionFragment"
+        android:label="@string/menu_box_suggestion"
+        tools:layout="@layout/fragment_box_suggestion" >
+        <action
+            android:id="@+id/action_nav_repair_to_nav_information"
+            app:destination="@id/nav_information" />
+    </fragment>
+
 
 </navigation>
