--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_information"
-        android:name="co.japl.android.torressansebastian.ui.information.InformationFragment"
+        android:name="co.japl.android.torressansebastian.ui.view.information.InformationFragment"
         android:label="@string/menu_information"
         tools:layout="@layout/fragment_contact_us" />
 
@@ -25,7 +25,7 @@
         android:id="@+id/nav_contact_us"
         android:name="co.japl.android.torressansebastian.ui.ContactUs.ContactUsFragment"
         android:label="@string/menu_contact_us"
-        tools:layout="@layout/fragment_location" >
+        tools:layout="@layout/fragment_location">
         <action
             android:id="@+id/action_nav_contact_us_to_nav_information"
             app:destination="@id/nav_information" />
