--- a/app/src/main/res/drawable-anydpi/ic_action_person.xml
+++ b/app/src/main/res/drawable-anydpi/ic_action_person.xml
@@ -5,12 +5,12 @@
     android:viewportHeight="24"
     android:tint="#333333"
     android:alpha="0.6">
-  <group android:scaleX="1.2"
-      android:scaleY="1.2"
-      android:translateX="-2.4"
-      android:translateY="-2.4">
+  <group android:scaleX="1.5"
+      android:scaleY="1.5"
+      android:translateX="-6"
+      android:translateY="-6">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M10,4H4c-1.1,0 -1.99,0.9 -1.99,2L2,18c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V8c0,-1.1 -0.9,-2 -2,-2h-8l-2,-2z"/>
+        android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
   </group>
 </vector>
